# subtitles

./: .gitignore  CMakeLists.txt  README.md  inf.txt
include/: main_menu.h  stopwatch.h  subtitles.h  subtitles_settings.h  subtitles_setup_window.h  subtitles_window.h  translator.h
include/globalHotkey/: hotkeymap.h  uexception.cpp  uexception.h  uglobalhotkeys.cpp  uglobalhotkeys.h  ukeysequence.cpp  ukeysequence.h
src/: main.cpp  main_menu.cpp  stopwatch.cpp  subtitles.cpp  subtitles_settings.cpp  subtitles_setup_window.cpp  subtitles_window.cpp  translator.cpp
